Update with local vllm and lab-materials/01 lab-materials/02-tools

--- a/lab-materials/01-llms/1.1-basic-llm-prompt-memory-granite3.ipynb
+++ b/lab-materials/01-llms/1.1-basic-llm-prompt-memory-granite3.ipynb
@@ -18,23 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a16ed2e6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!pip install -q langchain openai\n",
-    "!pip install langchain-openai\n",
-    "!pip install \"langchain-core==0.3.27\"\n",
-    "!pip install langchain_community\n",
-    "#!pip uninstall langchain openai"
+    "# !pip install -q langchain openai\n",
+    "# !pip install langchain-openai\n",
+    "# !pip install \"langchain-core==0.3.27\"\n",
+    "# !pip install langchain_community\n",
+    "#!pip uninstall langchain openai\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "60bb3f0f-40b5-49a6-b493-5e361db0113e",
    "metadata": {
     "tags": []
@@ -52,16 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b908fd0-01dd-4ad2-b745-b3a4c56a7a7e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
-    "MODEL_NAME = \"granite-3-8b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
+    "# MODEL_NAME = \"granite-3-8b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -74,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "01baa2b8-529d-455d-ad39-ef4a96dbaf97",
    "metadata": {
     "tags": []
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fdd8bc4c-b353-4a51-a8b7-6cb348e19623",
    "metadata": {
     "tags": []
@@ -144,7 +149,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1788/2290902444.py:1: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory=ConversationBufferMemory()\n"
+     ]
+    }
+   ],
    "source": [
     "memory=ConversationBufferMemory()"
    ]
@@ -179,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_627/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
+      "/tmp/ipykernel_1788/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :meth:`~RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html` instead.\n",
       "  conversation = ConversationChain(llm=llm,\n"
      ]
     }
@@ -210,16 +224,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error in StdOutCallbackHandler.on_chain_start callback: AttributeError(\"'NoneType' object has no attribute 'get'\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3m<|start_of_role|>system<|end_of_role|>\n",
       "You are a helpful, respectful, and honest assistant. Always be as helpful as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n",
@@ -233,7 +243,7 @@
       "\n",
       "<|start_of_role|>assistant<|end_of_role|>\n",
       "\u001b[0m\n",
-      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's often used as a benchmark for the overall U.S. stock market. The index is market-cap weighted, meaning that larger companies have a greater influence on the index's movement.\n",
+      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P\" or \"the Index\". The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's movement.\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     }
@@ -252,16 +262,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error in StdOutCallbackHandler.on_chain_start callback: AttributeError(\"'NoneType' object has no attribute 'get'\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3m<|start_of_role|>system<|end_of_role|>\n",
       "You are a helpful, respectful, and honest assistant. Always be as helpful as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n",
@@ -270,7 +276,7 @@
       "<|end_of_text|>\n",
       "\n",
       "<|start_of_role|>user<|end_of_role|>Human: Describe what is the S&P500 in 100 words or less.\n",
-      "AI: The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's often used as a benchmark for the overall U.S. stock market. The index is market-cap weighted, meaning that larger companies have a greater influence on the index's movement.\n",
+      "AI: The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P\" or \"the Index\". The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's movement.\n",
       "Human: How many companies are included?\n",
       "<|end_of_text|>\n",
       "\n",
@@ -337,7 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry for the confusion, but as of now, we are in the year 2023. Therefore, I cannot provide the results of the S&P500 for the years 2024 and beyond, as these years have not yet occurred. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its performance is determined by the market forces of supply and demand, and it can fluctuate daily based on various factors such as economic indicators, company earnings, and geopolitical events."
+      "I'm sorry for the confusion, but as of now, we are in the year 2023. Therefore, I cannot provide the results of the S&P500 for the years 2024 and beyond, as these results do not exist yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available up to the present day."
      ]
     }
    ],
@@ -358,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I apologize, but I cannot provide the results of the S&P500 for the years 2024 and beyond, as these years have not yet occurred. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its performance is determined by the market forces of supply and demand, and it can fluctuate daily based on various factors such as economic indicators, company earnings, and geopolitical events."
+      "I apologize, but I am unable to provide the results of the S&P500 for the years 2024 and beyond, as these results do not exist yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available up to the present day."
      ]
     }
    ],
@@ -380,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
