--- a/lab-materials/01-llms/1.1-basic-llm-prompt-memory.ipynb
+++ b/lab-materials/01-llms/1.1-basic-llm-prompt-memory.ipynb
@@ -55,9 +55,13 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
-    "MODEL_NAME = \"mistral-7b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
+    "# MODEL_NAME = \"mistral-7b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -138,7 +142,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1840/2290902444.py:1: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory=ConversationBufferMemory()\n"
+     ]
+    }
+   ],
    "source": [
     "memory=ConversationBufferMemory()"
    ]
@@ -173,7 +186,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2184/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
+      "/tmp/ipykernel_1840/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :meth:`~RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html` instead.\n",
       "  conversation = ConversationChain(llm=llm,\n"
      ]
     }
@@ -204,16 +217,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error in StdOutCallbackHandler.on_chain_start callback: AttributeError(\"'NoneType' object has no attribute 'get'\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3m<s>[INST] <<SYS>>\n",
       "You are a helpful, respectful and honest assistant. Always be as helpful as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n",
@@ -227,7 +236,7 @@
       "AI:\n",
       "[/INST]\n",
       "\u001b[0m\n",
-      " The S&P 500, or Standard & Poor's 500, is a stock market index that measures the performance of 500 large companies listed on stock exchanges in the United States. It is widely regarded as a primary gauge of U.S. stock market health and is often used as a benchmark for various investment strategies. Companies in the S&P 500 span multiple sectors, including technology, finance, healthcare, and consumer goods, among others. The index is weighted by market capitalization, meaning larger companies have a greater influence on its overall performance.\n",
+      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It is one of the most widely followed equity indices and is often used as a benchmark for the overall U.S. stock market. The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's performance.\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     }
@@ -246,16 +255,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error in StdOutCallbackHandler.on_chain_start callback: AttributeError(\"'NoneType' object has no attribute 'get'\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3m<s>[INST] <<SYS>>\n",
       "You are a helpful, respectful and honest assistant. Always be as helpful as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n",
@@ -265,12 +270,12 @@
       "\n",
       "Current conversation:\n",
       "Human: Describe what is the S&P500 in 100 words or less.\n",
-      "AI:  The S&P 500, or Standard & Poor's 500, is a stock market index that measures the performance of 500 large companies listed on stock exchanges in the United States. It is widely regarded as a primary gauge of U.S. stock market health and is often used as a benchmark for various investment strategies. Companies in the S&P 500 span multiple sectors, including technology, finance, healthcare, and consumer goods, among others. The index is weighted by market capitalization, meaning larger companies have a greater influence on its overall performance.\n",
+      "AI: The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It is one of the most widely followed equity indices and is often used as a benchmark for the overall U.S. stock market. The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's performance.\n",
       "Human: How many companies are included?\n",
       "AI:\n",
       "[/INST]\n",
       "\u001b[0m\n",
-      " The S&P 500 includes 500 large companies listed on stock exchanges in the United States. These companies represent various sectors such as technology, finance, healthcare, and consumer goods, among others.\n",
+      "The S&P 500 includes 500 companies.\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     }
@@ -331,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " I'm sorry for any confusion, but the S&P 500 results are not available for future years as they are based on historical data and have not occurred yet. The S&P 500 is an American stock market index based on the market capitalizations of 500 large companies having common stock listed on the NYSE or NASDAQ. To get the S&P 500 results for a specific year, you would typically look up the annual performance data provided by financial institutions or online resources that track stock market indices. For example, you can find the S&P 500 results for past years on websites like Yahoo Finance or Bloomberg."
+      "I'm sorry for the confusion, but as of now, we are in the year 2023. Therefore, I cannot provide the S&P500 results for the years 2024 and beyond, as they have not occurred yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available for past years, but future results are not predictable."
      ]
     }
    ],
@@ -352,7 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " I apologize for any confusion, but the S&P 500 results are not available for future years as they are based on historical data and have not occurred yet. The S&P 500 is an American stock market index based on the market capitalizations of 500 large companies having common stock listed on the NYSE or NASDAQ. To get the S&P 500 results for a specific year, you would typically look up the annual performance data provided by financial institutions or online resources that track stock market indices. For example, you can find the S&P 500 results for past years on websites like Yahoo Finance or Bloomberg. However, since we are discussing the last 5 years starting from 2024, it's important to note that these results are not available as they have not been determined yet."
+      "I apologize, but I am unable to provide the S&P500 results for the years 2024 and beyond, as they have not occurred yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available for past years, but future results are not predictable."
      ]
     }
    ],
@@ -374,7 +379,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -388,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
