--- a/lab-materials/02-tools/2.1-tools-calling-granite3.ipynb
+++ b/lab-materials/02-tools/2.1-tools-calling-granite3.ipynb
@@ -46,23 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a16ed2e6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!pip install -q langchain openai\n",
-    "!pip install langchain-openai\n",
-    "!pip install \"langchain-core==0.3.27\"\n",
-    "!pip install langchain_community\n",
-    "!pip install -q termcolor langchain_community duckduckgo_search wikipedia"
+    "# !pip install -q langchain openai\n",
+    "# !pip install langchain-openai\n",
+    "# !pip install \"langchain-core==0.3.27\"\n",
+    "# !pip install langchain_community\n",
+    "# !pip install -q termcolor langchain_community duckduckgo_search wikipedia\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "60bb3f0f-40b5-49a6-b493-5e361db0113e",
    "metadata": {
     "tags": []
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3d7998b5-4373-4b70-bd81-9617f7ff6bf1",
    "metadata": {
     "tags": []
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ee09847d-9ff7-4181-ad11-96186bf0a322",
    "metadata": {
     "tags": []
@@ -151,7 +152,7 @@
       "Tools Name:\n",
       " duckduckgo_search\n",
       "Tools Description:\n",
-      " duckduckgo_search - A wrapper around DuckDuckGo Search. Useful for when you need to answer questions about current events. Input should be a search query., args: {{'query': {{'title': 'Query', 'description': 'search query to look up', 'type': 'string'}}}}\n"
+      " duckduckgo_search - A wrapper around DuckDuckGo Search. Useful for when you need to answer questions about current events. Input should be a search query., args: {{'query': {{'description': 'search query to look up', 'title': 'Query', 'type': 'string'}}}}\n"
      ]
     }
    ],
@@ -193,9 +194,12 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
-    "MODEL_NAME = \"granite-3-8b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
+    "# MODEL_NAME = \"granite-3-8b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "01baa2b8-529d-455d-ad39-ef4a96dbaf97",
    "metadata": {
     "tags": []
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fdd8bc4c-b353-4a51-a8b7-6cb348e19623",
    "metadata": {
     "tags": []
@@ -344,7 +348,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_920/3274098412.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "/tmp/ipykernel_1960/3274098412.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
@@ -385,8 +389,9 @@
       "  \"action\": \"duckduckgo_search\",\n",
       "  \"action_input\": {\n",
       "    \"query\": {\n",
-      "      \"title\": \"Last 5 years S&P 500 results\",\n",
-      "      \"description\": \"S&P 500 yearly performance from the past 5 years\"\n",
+      "      \"description\": \"S&P500 last 5 years results\",\n",
+      "      \"title\": \"Query\",\n",
+      "      \"type\": \"string\"\n",
       "    }\n",
       "  }\n",
       "}"
@@ -423,8 +428,9 @@
       "  \"action\": \"duckduckgo_search\",\n",
       "  \"action_input\": {\n",
       "    \"query\": {\n",
-      "      \"title\": \"Last 5 years S&P 500 results\",\n",
-      "      \"description\": \"S&P 500 yearly performance from the past 5 years\"\n",
+      "      \"description\": \"S&P500 last 5 years results\",\n",
+      "      \"title\": \"Query\",\n",
+      "      \"type\": \"string\"\n",
       "    }\n",
       "  }\n",
       "}\n"
@@ -452,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fb494726-27f2-417a-a7fe-386a823a791d",
    "metadata": {
     "tags": []
@@ -463,12 +469,11 @@
      "output_type": "stream",
      "text": [
       "--> Executing tool: duckduckgo_search\n",
-      "----> Executing DuckDuckGo search for: S&P 500 yearly performance from the past 5 years\n",
-      "------> Search Result: S&P 500 5 Year Return is at 87.83%, compared to 93.58% last month and 54.65% last year. This is higher than the long term average of 46.17%. The S&P 500 5 Year Return is the investment return received for a 5 year period, excluding dividends, when holding the S&P 500 index. 5 year chart of the S&P 500 stock index* The 5 year chart of S&P 500 summarizes the chages in the price well, however, we recommend to have a look at the chart(s) below, too. Similar charts of the past 10 year can be found here. You can find charts of other periods (1, 3, 6, 12 months etc.) here. 5 years return and graph of S&P 500* When looking at the Periods in the Price Performance table, the 5-Day through 2-Year periods are based on daily data, the 3-Year and 5-Year periods are based on weekly data, and the 10-Year and 20-Year periods are based on monthly data. Barchart Symbol Notes Tutorial (8:43) New Highs The S&P 500 has gained about 10.5% annually since its introduction in 1957. The S&P 500's annual average return in 2023 was 26.3%, a significant increase from the -18.1% return in 2022. The S&P 500 is a market-capitalization-weighted index of the 500 leading publicly traded companies in the U.S. The index acts as a benchmark of the performance of the U.S. stock market overall ...\n",
-      "\n",
-      "\n",
-      "##### Answer to the User Input Question: 'What are the last 5 year results of the S&P500?' #####\n",
-      "The S&P 500 5-year return as of the latest data is 87.83%, which is higher than the long-term average of 46.17%. This return is an increase from the 54.65% recorded last year and a significant increase from the -18.1% return in 2022."
+      "----> Executing DuckDuckGo search for: {'description': 'S&P500 last 5 years results', 'title': 'Query', 'type': 'string'}\n",
+      "Error executing tool duckduckgo_search: 1 validation error for DDGInput\n",
+      "query\n",
+      "  Field required [type=missing, input_value={'description': 'S&P500 l...uery', 'type': 'string'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.10/v/missing\n"
      ]
     }
    ],
@@ -545,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -559,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
