--- a/lab-materials/02-tools/2.2-cot-prompting-granite3.ipynb
+++ b/lab-materials/02-tools/2.2-cot-prompting-granite3.ipynb
@@ -45,27 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a16ed2e6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install -q langchain openai\n",
-    "!pip install langchain-openai\n",
-    "!pip install \"langchain-core==0.3.27\"\n",
-    "!pip install langchain_community"
+    "# !pip install -q langchain openai\n",
+    "# !pip install langchain-openai\n",
+    "# !pip install \"langchain-core==0.3.27\"\n",
+    "# !pip install langchain_community\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
@@ -98,9 +89,17 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
-    "MODEL_NAME = \"granite-3-8b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
+    "# MODEL_NAME = \"granite-3-8b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\"\n",
+    "\n",
+    "# INFERENCE_SERVER_URL = \"https://api.feidaapi.com\"\n",
+    "# MODEL_NAME = \"gpt-4\"\n",
+    "# API_KEY= \"sk-TsoMJYTiW1Ya1AatboGdUGXEdCOAWeCeIbvUCkNMonrCHoQ7\""
    ]
   },
   {
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f875c62b-931a-402e-9494-98b7296f8b2b",
    "metadata": {
     "tags": []
@@ -183,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1129/2670321090.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "/tmp/ipykernel_2384/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
@@ -215,7 +214,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " To design a financial report based on reports from larger Financial Services Institutions (FSIs), you should focus on key financial metrics such as revenue, net income, assets, liabilities, and equity. Additionally, consider analyzing their risk management strategies, investment portfolios, and operational efficiency. It's also beneficial to compare your institution's performance against the benchmarks set by these larger FSIs to identify areas for improvement and opportunities for growth. Furthermore, include an executive summary that provides an overview of the findings and any relevant conclusions or recommendations."
+      "When designing a financial report, especially one that is based on reports from large Financial Services Institutions (FSIs), there are several key areas you should focus on:\n",
+      "\n",
+      "1. **Executive Summary**: This section provides an overview of the entire report. It should be concise and highlight the most important findings.\n",
+      "\n",
+      "2. **Financial Highlights**: This section includes key financial data such as revenue, net income, earnings per share, dividends, etc. It's also useful to include year-over-year comparisons and industry benchmarks.\n",
+      "\n",
+      "3. **Balance Sheet**: This provides information about the company's assets, liabilities, and shareholders' equity.\n",
+      "\n",
+      "4. **Income Statement**: This shows how much revenue the company earned over a specific period of time, as well as the costs and expenses associated with earning that revenue.\n",
+      "\n",
+      "5. **Cash Flow Statement**: This shows how changes in balance sheet accounts and income affect cash and cash equivalents, and breaks the analysis down to operating, investing, and financing activities.\n",
+      "\n",
+      "6. **Analysis of Financial Performance**: This section includes ratios and other metrics to evaluate the company's performance, such as profitability ratios, liquidity ratios, efficiency ratios, and leverage ratios.\n",
+      "\n",
+      "7. **Risk Factors**: This section outlines potential risks that could impact the company's financial performance.\n",
+      "\n",
+      "8. **Future Outlook**: This section provides projections for future performance based on current trends and market conditions.\n",
+      "\n",
+      "Remember, the goal of a financial report is to provide clear, concise, and accurate information about the financial health of a company. Always ensure your data is accurate and up-to-date, and present it in a way that is easy for readers to understand."
      ]
     }
    ],
@@ -305,23 +322,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " To design a financial report based on the reports from larger Financial Services Institutions (FSIs), here are some key areas you should focus on:\n",
+      "When designing a financial report around the reports from larger Financial Services Institutions (FSIs), you should focus on several key areas:\n",
       "\n",
-      "1. **Financial Statements**: Analyze the income statements, balance sheets, and cash flow statements of the FSIs. These statements provide a comprehensive overview of their financial performance, including revenue, expenses, assets, liabilities, and cash flow.\n",
+      "1. **Financial Performance**: This includes revenue, profit, and loss statements. It's important to understand how these institutions are performing financially, as it can provide insights into their business strategies and market conditions.\n",
       "\n",
-      "2. **Key Performance Indicators (KPIs)**: Identify the KPIs that are commonly used by the FSIs and compare them with your own organization's performance. Some common KPIs include Return on Equity (ROE), Return on Assets (ROA), Net Interest Margin, and Efficiency Ratio.\n",
+      "2. **Balance Sheet Analysis**: This involves looking at assets, liabilities, and shareholders' equity. It gives a snapshot of what the institution owns and owes, as well as the amount invested by shareholders.\n",
       "\n",
-      "3. **Risk Management**: Examine the risk management practices of the FSIs. This includes their approach to credit risk, market risk, operational risk, and liquidity risk. Understanding these practices can help you identify potential risks in your own organization and develop strategies to mitigate them.\n",
+      "3. **Cash Flow Statement**: This shows how changes in balance sheet accounts and income affect cash and cash equivalents, and breaks the analysis down to operating, investing, and financing activities.\n",
       "\n",
-      "4. **Regulatory Compliance**: Review the regulatory environment in which the FSIs operate and compare it with your own. This includes understanding the laws, regulations, and guidelines that apply to the financial services industry. Ensuring compliance with these regulations is crucial for maintaining a strong reputation and avoiding penalties.\n",
+      "4. **Risk Management**: FSIs face various types of risks including credit risk, market risk, operational risk, etc. Understanding how they manage these risks can be crucial.\n",
       "\n",
-      "5. **Innovation and Technology**: Look at how the FSIs are leveraging technology to improve their operations, reduce costs, and enhance customer experience. This could include the use of artificial intelligence, blockchain, cloud computing, and mobile banking. Adopting similar technologies could help your organization stay competitive.\n",
+      "5. **Regulatory Compliance**: FSIs operate under strict regulatory environments. Information about their compliance with these regulations can be very informative.\n",
       "\n",
-      "6. **Market Trends**: Keep an eye on the broader trends in the financial services industry. This could include changes in consumer behavior, new products and services, and shifts in regulatory requirements. Understanding these trends can help you anticipate future challenges and opportunities.\n",
+      "6. **Market Position and Competitive Landscape**: Understanding the institution's position in the market compared to its competitors can provide valuable context.\n",
       "\n",
-      "7. **Competitive Analysis**: Analyze the competitive landscape of the financial services industry. This includes identifying your competitors, understanding their strengths and weaknesses, and assessing your own competitive position. This information can help you make strategic decisions about product development, pricing, and marketing.\n",
+      "7. **Future Outlook and Strategy**: Most FSIs will provide some information about their future plans and strategies. This can give you an idea of where the institution is headed and potential opportunities or challenges ahead.\n",
       "\n",
-      "8. **Stakeholder Analysis**: Consider the needs and expectations of your stakeholders, such as investors, customers, employees, and regulators. This could involve conducting surveys, focus groups,"
+      "Remember, each FSI may present their financial information differently, so it's important to familiarize yourself with each institution's specific reporting style and format."
      ]
     }
    ],
@@ -349,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
