--- a/lab-materials/02-tools/2.2-cot-prompting.ipynb
+++ b/lab-materials/02-tools/2.2-cot-prompting.ipynb
@@ -52,21 +52,13 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install -q langchain==0.1.9 openai==1.13.3\n",
-    "!pip install -q langchain-openai langchain\n",
-    "#!pip uninstall langchain openai"
+    "# !pip install -q langchain-openai langchain\n",
+    "#!pip uninstall langchain openai\n",
+    "\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
@@ -99,9 +91,13 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
-    "MODEL_NAME = \"mistral-7b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
+    "# MODEL_NAME = \"mistral-7b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -182,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1129/2670321090.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "/tmp/ipykernel_2493/2670321090.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
@@ -214,7 +210,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " To design a financial report based on reports from larger Financial Services Institutions (FSIs), you should focus on key financial metrics such as revenue, net income, assets, liabilities, and equity. Additionally, consider analyzing their risk management strategies, investment portfolios, and operational efficiency. It's also beneficial to compare your institution's performance against the benchmarks set by these larger FSIs to identify areas for improvement and opportunities for growth. Furthermore, include an executive summary that provides an overview of the findings and any relevant conclusions or recommendations."
+      "When designing a financial report based on the reports of larger Financial Service Institutions (FSIs), you should focus on the following key areas:\n",
+      "\n",
+      "1. **Financial Statements**: Review the income statement, balance sheet, and cash flow statement to understand the institution's financial performance, assets, liabilities, and cash flow.\n",
+      "\n",
+      "2. **Risk Management**: Analyze the institution's risk management strategies, including credit risk, market risk, operational risk, and liquidity risk.\n",
+      "\n",
+      "3. **Regulatory Compliance**: Ensure the institution adheres to relevant financial regulations and standards, such as Basel III, IFRS, or GAAP.\n",
+      "\n",
+      "4. **Profitability and Efficiency**: Evaluate the institution's profitability ratios (e.g., return on assets, return on equity) and efficiency ratios (e.g., cost-to-income ratio, asset turnover).\n",
+      "\n",
+      "5. **Capital Adequacy**: Assess the institution's capital adequacy ratio to ensure it has sufficient capital to cover potential losses and meet regulatory requirements.\n",
+      "\n",
+      "6. **Liquidity and Funding**: Examine the institution's liquidity position and funding sources to ensure it can meet short-term obligations and maintain long-term solvency.\n",
+      "\n",
+      "7. **Credit Quality**: Analyze the institution's loan portfolio, including loan loss provisions, non-performing loans, and credit quality trends.\n",
+      "\n",
+      "8. **Market Position**: Evaluate the institution's market position, competitive advantages, and growth opportunities in the financial services industry.\n",
+      "\n",
+      "9. **Corporate Governance**: Assess the institution's corporate governance practices, including board composition, executive compensation, and internal controls.\n",
+      "\n",
+      "10. **Sustainability and ESG**: Consider the institution's environmental, social, and governance (ESG) practices and their impact on long-term financial performance and risk management."
      ]
     }
    ],
@@ -304,23 +320,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " To design a financial report based on the reports from larger Financial Services Institutions (FSIs), here are some key areas you should focus on:\n",
+      "1. **Understand the Purpose**: The primary purpose of a financial report is to provide information about a company's financial performance and position. It should be clear, concise, and easy to understand.\n",
       "\n",
-      "1. **Financial Statements**: Analyze the income statements, balance sheets, and cash flow statements of the FSIs. These statements provide a comprehensive overview of their financial performance, including revenue, expenses, assets, liabilities, and cash flow.\n",
+      "2. **Identify the Relevant Information**: Look for key financial metrics such as revenue, expenses, profits, losses, assets, liabilities, and equity. Also, consider non-financial information like market trends, competitive landscape, and strategic initiatives.\n",
       "\n",
-      "2. **Key Performance Indicators (KPIs)**: Identify the KPIs that are commonly used by the FSIs and compare them with your own organization's performance. Some common KPIs include Return on Equity (ROE), Return on Assets (ROA), Net Interest Margin, and Efficiency Ratio.\n",
+      "3. **Compare with Larger FSIs**: Compare your company's financial performance with that of larger Financial Service Institutions (FSIs). This will help you understand your company's position in the market and identify areas for improvement.\n",
       "\n",
-      "3. **Risk Management**: Examine the risk management practices of the FSIs. This includes their approach to credit risk, market risk, operational risk, and liquidity risk. Understanding these practices can help you identify potential risks in your own organization and develop strategies to mitigate them.\n",
+      "4. **Use Standard Formats**: Use standard financial reporting formats to ensure consistency and comparability. This could include income statements, balance sheets, cash flow statements, and statements of shareholders' equity.\n",
       "\n",
-      "4. **Regulatory Compliance**: Review the regulatory environment in which the FSIs operate and compare it with your own. This includes understanding the laws, regulations, and guidelines that apply to the financial services industry. Ensuring compliance with these regulations is crucial for maintaining a strong reputation and avoiding penalties.\n",
+      "5. **Provide Context**: Provide context for your financial performance. This could include explanations for any significant changes in financial performance, discussions of market trends, and descriptions of strategic initiatives.\n",
       "\n",
-      "5. **Innovation and Technology**: Look at how the FSIs are leveraging technology to improve their operations, reduce costs, and enhance customer experience. This could include the use of artificial intelligence, blockchain, cloud computing, and mobile banking. Adopting similar technologies could help your organization stay competitive.\n",
+      "6. **Ensure Accuracy**: Ensure that all financial information is accurate and has been reviewed by a qualified accountant or auditor.\n",
       "\n",
-      "6. **Market Trends**: Keep an eye on the broader trends in the financial services industry. This could include changes in consumer behavior, new products and services, and shifts in regulatory requirements. Understanding these trends can help you anticipate future challenges and opportunities.\n",
-      "\n",
-      "7. **Competitive Analysis**: Analyze the competitive landscape of the financial services industry. This includes identifying your competitors, understanding their strengths and weaknesses, and assessing your own competitive position. This information can help you make strategic decisions about product development, pricing, and marketing.\n",
-      "\n",
-      "8. **Stakeholder Analysis**: Consider the needs and expectations of your stakeholders, such as investors, customers, employees, and regulators. This could involve conducting surveys, focus groups,"
+      "7. **Review and Revise**: Review your report for clarity, accuracy, and completeness. Make any necessary revisions before finalizing the report."
      ]
     }
    ],
@@ -348,7 +360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -362,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
