--- a/lab-materials/01-llms/1.0-basic-llm-prompt-granite3.ipynb
+++ b/lab-materials/01-llms/1.0-basic-llm-prompt-granite3.ipynb
@@ -18,23 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a16ed2e6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!pip install -q langchain openai\n",
-    "!pip install langchain-openai\n",
-    "!pip install \"langchain-core==0.3.27\"\n",
-    "!pip install langchain_community\n",
-    "#!pip uninstall langchain openai"
+    "# !pip install -q langchain openai\n",
+    "# !pip install langchain-openai\n",
+    "# !pip install \"langchain-core==0.3.27\"\n",
+    "# !pip install langchain_community\n",
+    "#!pip uninstall langchain openai\n",
+    "\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "60bb3f0f-40b5-49a6-b493-5e361db0113e",
    "metadata": {
     "tags": []
@@ -55,16 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b908fd0-01dd-4ad2-b745-b3a4c56a7a7e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
-    "MODEL_NAME = \"granite-3-8b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
+    "# MODEL_NAME = \"granite-3-8b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\"\n"
    ]
   },
   {
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "01baa2b8-529d-455d-ad39-ef4a96dbaf97",
    "metadata": {
     "tags": []
@@ -120,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fdd8bc4c-b353-4a51-a8b7-6cb348e19623",
    "metadata": {
     "tags": []
@@ -167,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f875c62b-931a-402e-9494-98b7296f8b2b",
    "metadata": {
     "tags": []
@@ -177,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_991/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "/tmp/ipykernel_1673/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
@@ -199,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ee09847d-9ff7-4181-ad11-96186bf0a322",
    "metadata": {
     "tags": []
@@ -209,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P.\" The index covers approximately 80% of all publicly traded U.S. equities and is weighted by market capitalization, meaning that larger companies have a greater impact on the index's performance."
+      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's often used as a benchmark for the overall U.S. stock market. The index is market-cap weighted, meaning that larger companies have a greater influence on the index's movement."
      ]
     }
    ],
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "60ed6c44-a016-49bd-8623-f231c5bba5b6",
    "metadata": {
     "tags": []
@@ -248,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry for the confusion, but I need more context to provide an accurate answer. Could you please specify which companies or industry you're referring to? This will help me give you the most helpful response possible."
+      "I'm sorry for the confusion, but I need more context to provide an accurate answer. Are you asking about a specific list of companies, or are you asking in general? Please provide more details so I can assist you better."
      ]
     }
    ],
@@ -270,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -284,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
