--- a/lab-materials/01-llms/1.0-basic-llm-prompt.ipynb
+++ b/lab-materials/01-llms/1.0-basic-llm-prompt.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a16ed2e6",
    "metadata": {
     "tags": []
@@ -26,8 +26,9 @@
    "outputs": [],
    "source": [
     "#!pip install -q langchain==0.1.9 openai==1.13.3\n",
-    "!pip install langchain-openai\n",
-    "#!pip uninstall langchain openai"
+    "# !pip install langchain-openai\n",
+    "#!pip uninstall langchain openai\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
@@ -60,9 +61,13 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
-    "MODEL_NAME = \"mistral-7b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
+    "# MODEL_NAME = \"mistral-7b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\"\n"
    ]
   },
   {
@@ -173,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2125/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "/tmp/ipykernel_1756/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
@@ -205,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The S&P 500, or Standard & Poor's 500, is a stock market index that measures the performance of 500 large companies listed on stock exchanges in the United States. It is widely regarded as a primary gauge of U.S. equities and is often used to reflect the overall health of the American economy. Companies included in the S&P 500 are selected based on market size, liquidity, and industry group representation."
+      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It is one of the most widely followed equity indices and is often used as a benchmark for the overall U.S. stock market. The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's performance."
      ]
     }
    ],
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "60ed6c44-a016-49bd-8623-f231c5bba5b6",
    "metadata": {
     "tags": []
@@ -236,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " I don't have real-time data or the ability to browse the internet, so I can't provide an exact number of companies that currently exist. However, it's estimated that there are millions of active businesses worldwide. The number is constantly changing due to new businesses being formed and others closing."
+      "I'm sorry for the confusion, but I need more context to provide an accurate answer. Could you please specify which companies or industry you're referring to?"
      ]
     }
    ],
@@ -258,7 +263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -272,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
