--- a/lab-materials/02-tools/2.1-tools-calling.ipynb
+++ b/lab-materials/02-tools/2.1-tools-calling.ipynb
@@ -51,7 +51,8 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install -q termcolor langchain_community duckduckgo_search wikipedia"
+    "#!pip install -q termcolor langchain_community duckduckgo_search wikipedia\n",
+    "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
    ]
   },
   {
@@ -144,7 +145,7 @@
       "Tools Name:\n",
       " duckduckgo_search\n",
       "Tools Description:\n",
-      " duckduckgo_search - A wrapper around DuckDuckGo Search. Useful for when you need to answer questions about current events. Input should be a search query., args: {{'query': {{'title': 'Query', 'description': 'search query to look up', 'type': 'string'}}}}\n"
+      " duckduckgo_search - A wrapper around DuckDuckGo Search. Useful for when you need to answer questions about current events. Input should be a search query., args: {{'query': {{'description': 'search query to look up', 'title': 'Query', 'type': 'string'}}}}\n"
      ]
     }
    ],
@@ -186,9 +187,13 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
-    "MODEL_NAME = \"mistral-7b-instruct\"\n",
-    "API_KEY= os.getenv('API_KEY')"
+    "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
+    "# MODEL_NAME = \"mistral-7b-instruct\"\n",
+    "# API_KEY= os.getenv('API_KEY')\n",
+    "\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -333,7 +338,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_920/3274098412.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "/tmp/ipykernel_2109/3274098412.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
@@ -370,12 +375,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "{\n",
       "  \"action\": \"duckduckgo_search\",\n",
       "  \"action_input\": {\n",
       "    \"query\": {\n",
-      "      \"title\": \"Last 5 years S&P 500 results\",\n",
-      "      \"description\": \"S&P 500 yearly performance from the past 5 years\"\n",
+      "      \"description\": \"S&P500 last 5 years\",\n",
+      "      \"title\": \"S&P500 Last 5 Years\",\n",
+      "      \"type\": \"string\"\n",
       "    }\n",
       "  }\n",
       "}"
@@ -408,12 +415,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### LLM Response: {\n",
+      "### LLM Response: \n",
+      "{\n",
       "  \"action\": \"duckduckgo_search\",\n",
       "  \"action_input\": {\n",
       "    \"query\": {\n",
-      "      \"title\": \"Last 5 years S&P 500 results\",\n",
-      "      \"description\": \"S&P 500 yearly performance from the past 5 years\"\n",
+      "      \"description\": \"S&P500 last 5 years\",\n",
+      "      \"title\": \"S&P500 Last 5 Years\",\n",
+      "      \"type\": \"string\"\n",
       "    }\n",
       "  }\n",
       "}\n"
@@ -452,12 +461,13 @@
      "output_type": "stream",
      "text": [
       "--> Executing tool: duckduckgo_search\n",
-      "----> Executing DuckDuckGo search for: S&P 500 yearly performance from the past 5 years\n",
-      "------> Search Result: S&P 500 5 Year Return is at 87.83%, compared to 93.58% last month and 54.65% last year. This is higher than the long term average of 46.17%. The S&P 500 5 Year Return is the investment return received for a 5 year period, excluding dividends, when holding the S&P 500 index. 5 year chart of the S&P 500 stock index* The 5 year chart of S&P 500 summarizes the chages in the price well, however, we recommend to have a look at the chart(s) below, too. Similar charts of the past 10 year can be found here. You can find charts of other periods (1, 3, 6, 12 months etc.) here. 5 years return and graph of S&P 500* When looking at the Periods in the Price Performance table, the 5-Day through 2-Year periods are based on daily data, the 3-Year and 5-Year periods are based on weekly data, and the 10-Year and 20-Year periods are based on monthly data. Barchart Symbol Notes Tutorial (8:43) New Highs The S&P 500 has gained about 10.5% annually since its introduction in 1957. The S&P 500's annual average return in 2023 was 26.3%, a significant increase from the -18.1% return in 2022. The S&P 500 is a market-capitalization-weighted index of the 500 leading publicly traded companies in the U.S. The index acts as a benchmark of the performance of the U.S. stock market overall ...\n",
+      "----> Executing DuckDuckGo search for: S&P500 last 5 years\n",
+      "------> Search Result: 5 year chart of the S&P 500 stock index* The 5 year chart of S&P 500 summarizes the chages in the price well, however, we recommend to have a look at the chart(s) below, too. Similar charts of the past 10 year can be found here. You can find charts of other periods (1, 3, 6, 12 months etc.) here. 5 years return and graph of S&P 500* S&P 500 5 Year Return is at 82.05%, compared to 92.05% last month and 90.27% last year. This is higher than the long term average of 46.44%. The S&P 500 5 Year Return is the investment return received for a 5 year period, excluding dividends, when holding the S&P 500 index. Here is the summary data of average yearly returns for the S&P 500 over the last 5 years to 150 years. Years Averaged (as of end of December 2024) Stock Market Average Return per Year (Dividends Reinvested) Average Return with Dividends Reinvested & Inflation Adjusted: 150 Years: 9.381%: 6.994%: 100 Years: 10.569%: 7.405%: 50 Years: 12.393%: 8. ... This widget shows the number of times this symbol reached a new low price for specific periods, from the past 5-Days to the past 20-Years. For each period, the \"Percent From Last\" column shows you where the current price is in relationship to the Low price for that period. Directly the 5 years chart of S&P 500 index (GSPC). S&P 500 index value on 5 years graph and in other time ranges. Check it out now!>>\n",
       "\n",
       "\n",
       "##### Answer to the User Input Question: 'What are the last 5 year results of the S&P500?' #####\n",
-      "The S&P 500 5-year return as of the latest data is 87.83%, which is higher than the long-term average of 46.17%. This return is an increase from the 54.65% recorded last year and a significant increase from the -18.1% return in 2022."
+      "\n",
+      "The S&P 500 index has seen a 5-year return of 82.05%, with an average yearly return of 12.393% over the past 50 years."
      ]
     }
    ],
@@ -534,7 +544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
